--- a/extra_playbooks/roles/kubernetes-apps/playbooks/templates/vagrant_tools_all.yml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/playbooks/templates/vagrant_tools_all.yml.j2
@@ -14,8 +14,8 @@
     - role: boss-ansible-role-tools
       task: tools
       timezone: 'UTC'
-      bossjones__user: vagrant
-      bossjones__group: vagrant
+      bossjones__user: pi
+      bossjones__group: pi
       boss__tools__install_docker_tools: True
       boss__tools__install_kube_tools: True
       boss__tools__install_rust_tools: False
@@ -24,8 +24,8 @@
     - role: boss-ansible-role-tools
       task: kube
       timezone: 'UTC'
-      bossjones__user: vagrant
-      bossjones__group: vagrant
+      bossjones__user: pi
+      bossjones__group: pi
       boss__tools__install_docker_tools: True
       boss__tools__install_kube_tools: True
       boss__tools__install_rust_tools: False
@@ -34,8 +34,8 @@
     - role: boss-ansible-role-tools
       task: docker
       timezone: 'UTC'
-      bossjones__user: vagrant
-      bossjones__group: vagrant
+      bossjones__user: pi
+      bossjones__group: pi
       boss__tools__install_docker_tools: True
       boss__tools__install_kube_tools: True
       boss__tools__install_rust_tools: False
@@ -44,8 +44,8 @@
     - role: boss-ansible-role-tools
       task: glances
       timezone: 'UTC'
-      bossjones__user: vagrant
-      bossjones__group: vagrant
+      bossjones__user: pi
+      bossjones__group: pi
       boss__tools__install_docker_tools: True
       boss__tools__install_kube_tools: True
       boss__tools__install_rust_tools: False
@@ -54,8 +54,8 @@
     - role: boss-ansible-role-tools
       task: rust
       timezone: 'UTC'
-      bossjones__user: vagrant
-      bossjones__group: vagrant
+      bossjones__user: pi
+      bossjones__group: pi
       boss__tools__install_docker_tools: True
       boss__tools__install_kube_tools: True
       boss__tools__install_rust_tools: False
@@ -64,8 +64,8 @@
     - role: boss-ansible-role-tools
       task: npm
       timezone: 'UTC'
-      bossjones__user: vagrant
-      bossjones__group: vagrant
+      bossjones__user: pi
+      bossjones__group: pi
       boss__tools__install_docker_tools: True
       boss__tools__install_kube_tools: True
       boss__tools__install_rust_tools: False
