--- a/extra_playbooks/roles/kubernetes-apps/playbooks/templates/vagrant_influxdb_opentsdb.yml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/playbooks/templates/vagrant_influxdb_opentsdb.yml.j2
@@ -8,8 +8,8 @@
   become: yes
   become_method: sudo
   vars:
-    bossjones__user: vagrant
-    bossjones__group: vagrant
+    bossjones__user: pi
+    bossjones__group: pi
     timezone: 'UTC'
   environment:
     DEBIAN_FRONTEND: noninteractive
