--- a/extra_playbooks/roles/kubernetes-apps/playbooks/templates/vagrant_netdata.yml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/playbooks/templates/vagrant_netdata.yml.j2
@@ -27,8 +27,8 @@
       # version: 1.1.3
       # graphite_install_version: "{{ version }}"
       # graphite_cache_graphite_url: 'http://127.0.0.1:8080'
-      # bossjones__user: vagrant
-      # bossjones__group: vagrant
+      # bossjones__user: pi
+      # bossjones__group: pi
       boss__netdata__netdata_interface: 'ens192'
 
       netdata_registry_enabled: True
