--- a/extra_playbooks/roles/kubernetes-apps/playbooks/templates/vagrant_playbook.yml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/playbooks/templates/vagrant_playbook.yml.j2
@@ -8,8 +8,8 @@
   become: yes
   become_method: sudo
   vars:
-    bossjones__user: vagrant
-    bossjones__group: vagrant
+    bossjones__user: pi
+    bossjones__group: pi
     timezone: 'UTC'
   environment:
     DEBIAN_FRONTEND: noninteractive
@@ -132,8 +132,8 @@
 {% if vagrant_playbook_enable_role_ntp == "enabled" %}
    - role: boss-ansible-role-ntp
      task: install
-     bossjones__user: vagrant
-     bossjones__group: vagrant
+     bossjones__user: pi
+     bossjones__group: pi
      timezone: 'UTC'
      timezone_update_hardware_clock: False
      # defaults file for ansible-ntp
@@ -163,8 +163,8 @@
 {% if vagrant_playbook_enable_role_tools == "enabled" %}
     - role: boss-ansible-role-tools
       task: tools
-      bossjones__user: vagrant
-      bossjones__group: vagrant
+      bossjones__user: pi
+      bossjones__group: pi
       boss__tools__install_docker_tools: True
       boss__tools__install_kube_tools: True
       boss__tools__install_rust_tools: True
@@ -176,8 +176,8 @@
 {% if vagrant_playbook_enable_role_journald is defined %}
 {% if vagrant_playbook_enable_role_journald == "enabled" %}
     - role: boss-ansible-role-journald
-      bossjones__user: vagrant
-      bossjones__group: vagrant
+      bossjones__user: pi
+      bossjones__group: pi
       tags:
         - boss-ansible-role-journald
 {% endif %}
@@ -212,8 +212,8 @@
       # version: 1.1.3
       # graphite_install_version: "{{ version }}"
       # graphite_cache_graphite_url: 'http://127.0.0.1:8080'
-      # bossjones__user: vagrant
-      # bossjones__group: vagrant
+      # bossjones__user: pi
+      # bossjones__group: pi
       boss__netdata__netdata_interface: 'ens192'
 
       netdata_registry_enabled: True
